Fix header overlapping: Add padding-top 64px to all ion-content elements

--- a/src/app/pages/tab1-list-search/tab1.page.scss
+++ b/src/app/pages/tab1-list-search/tab1.page.scss
@@ -6,7 +6,7 @@
 
 ion-content {
   --background: #f8f9fa;
-  --padding-top: 0;
+  --padding-top: 64px;
   --padding-bottom: 80px;
 }
 
