--- a/src/app/pages/tab4-privacy/tab4.page.scss
+++ b/src/app/pages/tab4-privacy/tab4.page.scss
@@ -6,6 +6,7 @@
 
 ion-content {
   --background: #f8f9fa;
+  --padding-top: 64px;
   --padding-bottom: 80px;
 }
 
